--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,1 +1,31 @@
-<p>post-create works!</p>
+<mat-card>
+    <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+      <mat-form-field>
+        <input
+          matInput
+          type="text"
+          name="title"
+          ngModel
+          required
+          minlength="3"
+          placeholder="Post Title"
+          #title="ngModel">
+      </mat-form-field>
+      <mat-form-field>
+        <input
+        matInput
+        type="text"
+        name="content"
+        ngModel
+        required
+        minlength="3"
+        placeholder="Post Content"
+        #content="ngModel">
+      </mat-form-field>
+      <div>
+        <button mat-raised-button color="accent" type="submit">Save Post</button>
+      </div>
+      
+    </form>
+  </mat-card>
+  
