--- a/src/app/head/navbar/navbar.component.html
+++ b/src/app/head/navbar/navbar.component.html
@@ -1,22 +1,36 @@
 <p>
     <mat-toolbar color="primary">
      <button mat-icon-button class="example-icon" routerLink="/" >
-      <mat-icon>home</mat-icon>
+      <mat-icon>home</mat-icon> 
     </button>
     <span >My App</span>
-    
-    <button mat-icon-button class="example-icon nav-l" >
+    <ul>
+      <li *ngIf="isAuthen">
+        <button mat-button routerLink="/create">
+          <mat-icon>create</mat-icon>
+          <span>Create</span>
+        </button>
+      </li>
+      <li *ngIf="isAuthen">
+        <span class="example-spacer"></span>
+        <button [routerLink]="['/fund']" routerLinkActive="router-link-active"  mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+      </li>
+    </ul>
+    <span class="spacer"></span>
+    <ul>
+      <li *ngIf="!isAuthen">
+        <button [routerLink]="['/login']"  mat-flat-button >
+          login
+      </button>
+    </li>
+    <li *ngIf="isAuthen">
+      <button (click)="logout()" mat-flat-button >
+        logout
     </button>
-    <button mat-button routerLink="/create">
-      <mat-icon>create</mat-icon>
-      <span>Create</span>
-    </button>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-     <mat-icon>share</mat-icon>
-   </button>
+  </li>
+  
+    </ul>
   </mat-toolbar>
   </p>
