--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,4 +1,5 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<div *ngIf="isAuthen">
+  <mat-accordion multi="true" *ngIf="posts.length > 0">
     <mat-expansion-panel *ngFor="let post of posts">
       <mat-expansion-panel-header>
         {{ post.title }}
@@ -11,4 +12,7 @@
     </mat-expansion-panel>
   </mat-accordion>
   <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
-  
+</div>
+<div *ngIf="!isAuthen">
+  <h1>Please sign in</h1>
+</div>
